--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "phaser_tut2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "author": "Scott Westover",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.3",
-    "phaser": "^3.23.0",
-    "socket.io": "^2.1.0"
-  }
+    "name": "funky-chicken-destroyer",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "start": "nodemon index.js"
+    },
+    "author": "Scott Westover",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.16.3",
+        "phaser": "^3.23.0",
+        "socket.io": "^2.1.0"
+    }
 }
