--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "start": "nodemon index.js"
     },
-    "author": "Scott Westover",
-    "license": "ISC",
+    "author": "Eric Gorski",
     "dependencies": {
         "express": "^4.16.3",
         "phaser": "^3.23.0",
